# libresample

./: CMakeLists.txt  libresample.pro
include/: libresample.h
src/: configtemplate.h  resample.c  resample_defs.h
